# orbital

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.init  GNUmakefile  Gopkg.toml  Makefile  README.md  Vagrantfile  bors.toml  build-protos.sh  build-release-dev.sh  build-release-server.sh  build-release.sh  build.rs  code-of-conduct.md  dev_readme.md  diesel.toml  docker-compose.infra.yml  docker-compose.yml  example_ocelot.yml  glide.yaml  go.mod  go.mod.bak  go.sum  hello.go  infra-docker-compose.yml  main.go  nexus.yml  ocelot.yml  orb.toml  orb.yml  orb.yml.schema.txt  questions_and_notes.md  roadmap.md  (+6 more)
admin/: Dockerfile  Makefile  admin.go  build-protos.sh  build.sh  config.go  config.yml  docker-compose.yml  guideocelotclient.go  guideocelotserver.go  guideocelotserver_util.go  guideocelotserver_util_test.go  level11.yml  validator.go  validator_test.go
build_signaler/: build_signaler.go  build_signaler_test.go  cc_werkerteller.go  cc_werkerteller_test.go  push_werkerteller.go  push_werkerteller_test.go  signaler.go  signaler_test.go  teststructs.go  werkerteller.go  werkerteller.mock.go
cli-rust/ocelot/ocelot_api/: Cargo.toml  build.rs  client_util.rs  mod.rs  protobuf_api.rs
cli/ocelot/: Cargo.toml  build.rs
cli/ocelot/git_meta/: git_info.rs
cli/ocelot/ocelot_api/: build.rs
cli/ocelot/src/: main.rs
cli/ocelot/subcommand/: Cargo.toml  build_subcmd.rs  cancel.rs  init.rs  logs.rs  mod.rs  poll.rs  repo.rs  status.rs  summary.rs  validate.rs  version.rs  watch.rs
cli/ocelot/subcommand/creds/: apple.rs  artifact.rs  env.rs  helm.rs  k8s.rs  mod.rs  notify.rs  slack.rs  ssh.rs  vcs.rs
cli/orb/: Cargo.toml  build.rs
cli/orb/src/: main.rs
cli/orb/src/service/: build_service.rs  credential_service.rs  integration_service.rs  mod.rs  organization_service.rs
cli/orb/src/subcommand/: Cargo.toml  build.rs  build_cmd.rs  cancel.rs  completion.rs  logs.rs  mod.rs  org.rs  poll.rs  repo.rs  secret.rs  summary.rs
cli/orb/src/subcommand/developer/: completion.rs  docker.rs  git.rs  local_build.rs  mod.rs  validate.rs
cli/orb/src/subcommand/developer/docker/: create.rs  exec.rs  mod.rs  pull.rs  start.rs  stop.rs
cli/orb/src/subcommand/developer/git/: clone.rs  info.rs  mod.rs  poll.rs
cli/orb/src/subcommand/operator/: mod.rs  start.rs
cli/orb/src/subcommand/org/: add.rs  get.rs  list.rs  mod.rs  remove.rs  update.rs
cli/orb/src/subcommand/repo/: add.rs  get.rs  list.rs  mod.rs  remove.rs  update.rs
cli/orb/src/subcommand/secret/: add.rs  get.rs  list.rs  mod.rs  remove.rs  update.rs
cli/orb/src/subcommand/server/: mod.rs  poll.rs  start.rs
client/: README.md  command.go
common/: common.go  constants.go  logfmt.go  paths.go  paths_test.go  util.go
configure/: configure.go
deploy/: Vagrantfile  docker-flyway-migrate-local.sh  docker-flyway-migrate.sh  infra-playbook.yml  ocelot-playbook.retry  ocelot-playbook.yml  orbital-playbook.yml  playbook.yml  vault-policy.hcl
dockering/: dockerfile.go  dockering.go
docs/: migrate.sh  ocelot.yml
getgit/: getgit.go
hookhandler/: Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  garbage.go  glide.yaml  heroku.yml  hookconvert.go  hookhandler.go  hookhandler_dev.go  hookhandler_test.go  main.go  nsq_produce.go  nsqhandler.go  util.go  webhookhandler.go
infra/: consul-docker-compose.yml  nexus-docker-compose.yml  nsq-docker-compose.yml  postgres-docker-compose.yml  vault-docker-compose.yml
k8s/: bootstrap_consul.sh  deployment.yml  ing.yaml  key.key  metaverse.pem  privkey.pem  svc.yaml
legacy/: docker-compose.yml  go.mod  go.sum  ocelot.yml
lib/agent_runtime/: Cargo.toml  build_engine.rs  docker.rs  mod.rs  vault.rs
lib/config_parser/: Cargo.toml  mod.rs  parser.rs  yaml.rs
lib/exec_runtime/: Cargo.toml  docker.rs  mod.rs
lib/orbital_agent/: Cargo.toml  build_engine.rs  mod.rs  vault.rs
lib/state_machine/: Cargo.toml  mod.rs  state_machine.dot
models/: Cargo.toml  build-protos.sh  build.proto  credential.proto  creds.proto  generate.go  guideocelot.proto  integration.proto  organization.proto  signaler.go  status.go  storage.go  storage.proto  vcshandler.go  vcshandler.proto  werker.go  werkerserver.proto
models/orbital_api/: Cargo.toml  build.rs  mod.rs  orbital_api.rs
models/orbital_database/: Cargo.toml  mod.rs
models/orbital_database/postgres/: Cargo.toml  build_stage.rs  build_summary.rs  build_target.rs  client.rs  mod.rs  org.rs  repo.rs  schema.rs  secret.rs
models/orbital_database/postgres/migrations/2019-12-05-221817_custom_types/: down.sql  up.sql
models/orbital_database/postgres/migrations/2019-12-08-004810_create_org/: down.sql  up.sql
models/orbital_database/postgres/migrations/2019-12-15-203512_create_secret/: down.sql  up.sql
models/orbital_database/postgres/migrations/2020-01-15-055440_create_repo/: down.sql  up.sql
models/orbital_database/postgres/migrations/2020-01-26-181104_build_target/: down.sql  up.sql
models/orbital_database/postgres/migrations/2020-01-31-053444_build_summary/: up.sql
models/orbital_database/postgres/migrations/2020-01-31-063221_build_stage/: down.sql  up.sql
models/orbital_database/postgres/migrations/2021-02-12-064719_create_triggers/: up.sql
models/orbital_database/postgres/schema/: mod.rs
models/orbital_headers/: Cargo.toml  build.rs
models/orbital_headers/src/: lib.rs  orbital_types.rs
nsqpb/: README.md  consume.go  docker-compose.yml  logconvert.go  produce.go
ocelog/: ocelog.go
ocenet/: handler.go  models.go  ocenet.go
ocevault/: ocevault.go
oldmodels/: flagger.go  guideocelot.proto  ocel.protoset  status.go  storage.go  werkerserver.proto
protohooks/: webhook.pb.go
protos/: build-protos.sh  build.pb.go  build.proto  build_meta.proto  code.proto  (+18 more)
services/: Cargo.toml  build_service.rs  code_service.rs  credential_service.rs  integration_service.rs  mod.rs  notify_service.rs  organization_service.rs  secret_service.rs
services/state_machine/: build_context.rs  build_state.rs  database_helper.rs  mod.rs
(+940 files in other folders)
