[workspace]
members = [
    "cli/orb",
    "cli/orb/src/subcommand",
    "lib/config_parser",
    "lib/exec_runtime",
    "lib/orbital_agent",
    "lib/git_meta",
    "lib/hashicorp_stack",
    "services",
    "models/orbital_database",
]

[patch.crates-io]
tonic = { git = 'https://github.com/hyperium/tonic.git' }
tonic-build = { git = 'https://github.com/hyperium/tonic.git' }