[package]
name = "orbital_services"
version = "0.1.0-alpha.1"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

[dependencies]
color-eyre = "^0.5"
chrono = "^0.4"
futures = "^0.3"
futures-util = "^0.3"
log = "^0.4"
mktemp = "^0.4"
hostname = "^0.3"
orbital_agent = { path = "../lib/orbital_agent" }
orbital_exec_runtime = { path = "../lib/exec_runtime" }
orbital_config_parser = { path = "../lib/config_parser" }
orbital_database = { path = "../models/orbital_database" }
git-meta = "^0.1" 
orbital_hashicorp_stack = { path = "../lib/hashicorp_stack" }
orbital_headers = { path = "../models/orbital_headers" }
prost-types = "^0.7"
thiserror = "^1.0"
tokio = { version = "^1.1", features = ["full"] }
tokio-stream = "^0.1"
tonic = "^0.4"
serde_json = "^1.0"

# For state machine
git-url-parse = "^0.3"
machine = "^0.3"

[lib]
name = "orbital_services"
path = "mod.rs"