[package]
name = "ocelot-rs"
version = "0.1.0"
authors = ["T.J. Telan <tjtelan@level11.com>"]
edition = "2018"

[dependencies]
structopt = "0.2"
clap = "2.33"
ocelot_subcommand = { path = "subcommand" }
git_meta = { path = "../../git_meta" }
ocelot_api = { path = "../../models/ocelot_api" }

[build-dependencies]
tower-grpc-build = {version = "0.1", features = ["tower-hyper"]}
