[package]
name = "orb"
version = "0.1.0-alpha.1"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"
default-run = "orb"

[dependencies]
color-eyre = "^0.5"
clap = "^2.33"
env_logger = "^0.8"
orbital_cli_subcommand = { path = "src/subcommand" }
orbital_headers = { path = "../../models/orbital_headers" }
orbital_services = { path = "../../services"}
structopt = "^0.3"
thiserror = "^1.0"
tokio = { version = "^1.1", features = ["full"] }
tonic = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.8"
log = "^0.4"
