[package]
name = "orb"
version = "0.1.0-alpha.1"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"
default-run = "orb"

[dependencies]
color-eyre = "^0.5"
clap = "^2.33"
env_logger = "^0.8"
orbital_headers = { path = "../../models/orbital_headers" }
orbital_services = { path = "../../services"}
structopt = "^0.3"
thiserror = "^1.0"
tokio = { version = "^1.1", features = ["full"] }
tonic = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.8"
log = "^0.4"


# Subcommand
chrono = "^0.4"
git2 = "^0.13"
git-url-parse = "^0.3"
orbital_agent = { path = "../../lib/orbital_agent" }
orbital_exec_runtime = { path = "../../lib/exec_runtime" }
orbital_config_parser = { path = "../../lib/config_parser" }
orbital_database = { path = "../../models/orbital_database" }
# Temporary. Move into agent runtime
orbital_hashicorp_stack = { path = "../../lib/hashicorp_stack" }
prettytable-rs = "^0.8"
strum = "^0.20"
strum_macros = "^0.20"
termcolor = "^1.1"
rand = "^0.8"
mktemp = "0.4"
serde_json = "^1.0"
git-event = "^0.3"
git-meta = "^0.3" 
hex = "^0.4"
chrono-humanize = "^0.1"

# Web server
hyper = "^0.14"
warp = { version = "^0.3" }
http = "^0.2"
http-body = "^0.4"
pin-project = "^1.0"
futures = { version = "^0.3", default-features = false, features = ["alloc"] }
tower = "^0.4"

[build-dependencies]
git-meta = "^0.3" 
chrono = "0.4"