[package]
name = "agent_runtime"
version = "0.1.0"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

[dependencies]
shiplift = "0.6"
tokio = "0.1"
log = "0.4"
git_meta = { path = "../git_meta" }
mktemp = "0.4"
config_parser = { path = "../config_parser" }
hashicorp_stack = { path = "../hashicorp_stack" }

[lib]
name = "agent_runtime"
path = "mod.rs"