[package]
name = "orbital_agent_runtime"
version = "0.1.0-alpha.1"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

[dependencies]
shiplift = "0.6"
tokio = "0.1"
log = "0.4"
orbital_git_meta = { path = "../git_meta" }
mktemp = "0.4"
orbital_config_parser = { path = "../config_parser" }
orbital_hashicorp_stack = { path = "../hashicorp_stack" }
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.12"

[lib]
name = "agent_runtime"
path = "mod.rs"