[package]
name = "orbital_exec_runtime"
version = "0.1.0-alpha.1"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

[dependencies]
shiplift = "^0.6"
tokio_01 = { package = "tokio", version = "^0.1" }
tokio = "^1.1"
log = "^0.4"
anyhow = "^1.0"
base64 = "^0.13"
serde_json = "^1.0"

[lib]
name = "orbital_exec_runtime"
path = "mod.rs"