[package]
name = "orbital_exec_runtime"
version = "0.1.0-alpha.1"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

[dependencies]
shiplift = "^0.7"
tokio = "^1.1"
log = "^0.4"
color-eyre = "^0.5"
base64 = "^0.13"
serde_json = "^1.0"
futures = "^0.3"

[lib]
name = "orbital_exec_runtime"
path = "mod.rs"