[package]
name = "orbital_agent"
version = "0.1.0-alpha.1"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

[dependencies]
shiplift = "^0.6"
tokio_01 = { package = "tokio", version = "^0.1" }
tokio = "^1.1"
log = "^0.4"
git-meta = "^0.1" 
mktemp = "^0.4"
orbital_config_parser = { path = "../config_parser" }
orbital_hashicorp_stack = { path = "../hashicorp_stack" }
orbital_exec_runtime = { path = "../exec_runtime" }
color-eyre = "^0.5"
thiserror = "^1.0"
base64 = "^0.13"
serde_json = "^1.0"

[lib]
name = "orbital_agent"
path = "mod.rs"