[package]
name = "orbital_state_machine"
version = "0.1.0-alpha.1"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

[dependencies]
#orbital_headers = { path = "../../models/orbital_headers" }
orbital_database = { path = "../../models/orbital_database" }
anyhow = "1.0"
log = "0.4"
chrono = "0.4"
machine = "0.3"

[lib]
name = "state_machine"
path = "mod.rs"
