[package]
name = "orbital_database"
version = "0.1.0"
authors = ["T.J. Telan <tjtelan@level11.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4", features = ["postgres", "chrono"] }
log = "0.4"
chrono = "0.4"
orbital_headers = { path = "../orbital_headers" }
prost-types = "0.5"

[lib]
name = "orbital_database"
path = "mod.rs"