[package]
name = "orbital_database"
version = "0.1.0-alpha.1"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "^1.0"
chrono = "^0.4"
diesel = { version = "^1.4", features = ["postgres", "chrono", "serde_json"] }
log = "^0.4"
orbital_hashicorp_stack = { path = "../../lib/hashicorp_stack" }
git-url-parse = "^0.3"
orbital_headers = { path = "../orbital_headers" }
prost-types = "^0.7"
strum = "^0.20"
strum_macros = "^0.20"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[lib]
name = "orbital_database"
path = "mod.rs"