[package]
name = "orbital_headers"
version = "0.1.0-alpha.1"
authors = ["Evan Cramer <eccramer@gmail.com>", "T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "^1.0"
prost = "^0.7"
prost-derive = "^0.7"
prost-types = "^0.7"
tonic = "^0.4"

[build-dependencies]
tonic-build = "^0.4"