[package]
name = "ocelot_api"
version = "0.1.0"
authors = ["T.J. Telan <tjtelan@level11.com>"]
edition = "2018"

[dependencies]
tower-hyper = "0.1"
tower-grpc = "0.1"
tower-util = "0.1"
prost = "0.5"
prost-types = "0.5"
bytes = "0.4"
http = "0.1"
hyper = "0.12"
futures = "0.1"

[lib]
name = "ocelot_api"
path = "mod.rs"

[build-dependencies]
tower-grpc-build = {version = "0.1", features = ["tower-hyper"]}